--- a/src/app/pages/account-profile/account-profile.component.html
+++ b/src/app/pages/account-profile/account-profile.component.html
@@ -27,7 +27,7 @@
               <div class="col-lg-2 col-md-12">
                 <div class="d-single-info text-lg-center">
                   <a
-                    class="view-cart cursor-pointer"
+                    class="view-cart cursor-pointer text-center"
                     (click)="router.navigate(['/cart']).then()">
                     <i class="fa-solid fa-cart-plus"></i>
                     Xem giỏ hàng
