--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -45,7 +45,7 @@
       <div class="tab-content">
         <app-swiper-product
           [slidesPerViewBreakPoint]="5"
-          [products]="productListSort$ | async"></app-swiper-product>
+          [products]="productListSort"></app-swiper-product>
       </div>
     </div>
   </div>
