--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -293,3 +293,73 @@
     margin-top: 8px;
   }
 }
+
+.search-box-mobile {
+  input {
+    padding-right: 70px;
+    height: 46px;
+    border-radius: 4px 0 0 4px;
+    width: 100%;
+    border: 1px solid $gray-lighter;
+  }
+
+  .search-btn button {
+    right: 0;
+    width: 50px;
+    height: 46px;
+    border-radius: 0 4px 4px 0;
+  }
+}
+
+.menu-list {
+  border-bottom: 1px solid $gray-lighter;
+
+  li {
+    padding: 8px 0;
+    font-size: 15px;
+  }
+}
+
+.offcanvas {
+  width: 85%;
+
+  .offcanvas-header {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
+  .offcanvas-body {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
+  .btn-primary {
+    background-color: $primary-color;
+    border: 1px solid $primary-color;
+  }
+
+  .btn-outline-primary {
+    border: 1px solid $primary-color;
+    color: $primary-color;
+  }
+
+  .user-menu-container {
+    margin: 1.25rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+
+  .user-menu-container a {
+    box-shadow: 0 8px 24px -4px #00095712;
+    border: 1px solid #e9e9e9;
+    padding: 0.375rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.25rem;
+  }
+
+  .user-menu-container .menu-half-w {
+    width: calc(50% - 0.25rem);
+  }
+}
