--- a/src/app/pages/order-history/order-history.component.html
+++ b/src/app/pages/order-history/order-history.component.html
@@ -34,7 +34,7 @@
                     *ngIf="detailProducts$ | async as detailProduct">
                     <tr *ngFor="let product of detailProduct">
                       <td>
-                        <div class="d-flex">
+                        <div class="detail-product">
                           <div
                             class="flex-shrink-0 avatar-md bg-light rounded p-1">
                             <img
