--- a/src/app/pages/order-history/order-history.component.scss
+++ b/src/app/pages/order-history/order-history.component.scss
@@ -1,1 +1,11 @@
 @import "text-size";
+
+.detail-product {
+  display: flex;
+}
+
+@media screen and (max-width: 992px) {
+  .detail-product {
+    display: unset !important;
+  }
+}
