--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -120,7 +120,7 @@
                   </div>
                   <div class="col-lg-12 form-group pb-4">
                     <label class="form-label">Ghi chú</label>
-                    <textarea class="w-100 form-control" rows="10"></textarea>
+                    <textarea class="w-100 form-control" rows="10" formControlName="note"></textarea>
                   </div>
                 </ng-container>
               </div>
