--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -163,55 +163,91 @@
               <li [ngbNavItem]="2">
                 <button ngbNavLink class="text-size-medium">Đánh giá</button>
                 <ng-template ngbNavContent>
-                  <div class="rating_wrap mt-30">
-                    <h5 class="rating-title-1 text-size-medium mb-2">
-                      Thêm đánh giá
-                    </h5>
-                    <p class="mb-3">
-                      Email của bạn sẽ không bị công khai. Những trường bắt buộc
-                      có *
-                    </p>
-                    <h6 class="rating-title-2 mb-2">Đánh giá của bạn</h6>
-                    <div class="rating_list">
-                      <div class="review_info mb-2">
-                        <ul class="product-rating d-flex mb-2">
-                          <li><i class="fa-regular fa-star"></i></li>
-                          <li><i class="fa-regular fa-star"></i></li>
-                          <li><i class="fa-regular fa-star"></i></li>
-                          <li><i class="fa-regular fa-star"></i></li>
-                          <li><i class="fa-regular fa-star"></i></li>
-                        </ul>
+                  <form [formGroup]="ratingForm">
+                    <div class="rating_wrap mt-30">
+                      <h5 class="rating-title-1 text-size-medium mb-2">
+                        Thêm đánh giá
+                      </h5>
+                      <p class="mb-3">
+                        Email của bạn sẽ không bị công khai. Những trường bắt
+                        buộc có *
+                      </p>
+                      <h6 class="rating-title-2 mb-2">Đánh giá của bạn</h6>
+                      <div class="row justify-content-center">
+                        <div class="rating-wrapper">
+                          <input
+                            type="radio"
+                            id="5-star-rating"
+                            name="star"
+                            value="5"
+                            formControlName="star" />
+                          <label for="5-star-rating" class="star-rating">
+                            <i class="fas fa-star d-inline-block"></i>
+                          </label>
+
+                          <input
+                            type="radio"
+                            id="4-star-rating"
+                            name="star"
+                            value="4"
+                            formControlName="star" />
+                          <label for="4-star-rating" class="star-rating star">
+                            <i class="fas fa-star d-inline-block"></i>
+                          </label>
+
+                          <input
+                            type="radio"
+                            id="3-star-rating"
+                            name="star"
+                            value="3"
+                            formControlName="star" />
+                          <label for="3-star-rating" class="star-rating star">
+                            <i class="fas fa-star d-inline-block"></i>
+                          </label>
+
+                          <input
+                            type="radio"
+                            id="2-star-rating"
+                            name="star"
+                            value="2"
+                            formControlName="star" />
+                          <label for="2-star-rating" class="star-rating star">
+                            <i class="fas fa-star d-inline-block"></i>
+                          </label>
+
+                          <input
+                            type="radio"
+                            id="1-star-rating"
+                            name="star"
+                            value="1"
+                            formControlName="star" />
+                          <label for="1-star-rating" class="star-rating star">
+                            <i class="fas fa-star d-inline-block"></i>
+                          </label>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="comments-area comments-reply-area">
-                    <div class="row">
-                      <div class="col-lg-12">
-                        <form action="#" class="comment-form-area">
-                          <div class="row comment-input">
-                            <div class="col-md-6 form-group mt-3" required>
-                              <label class="form-label">Tên</label>
-                              <input type="text" class="form-control" />
+                    <div class="comments-area comments-reply-area">
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <form action="#" class="comment-form-area">
+                            <div class="mt-3 form-group col-md-12">
+                              <label class="form-label">Nhận xét</label>
+                              <textarea
+                                class="form-control"
+                                formControlName="content"></textarea>
                             </div>
-                            <div class="col-md-6 form-group mt-3" required>
-                              <label class="form-label">Email</label>
-                              <input type="text" class="form-control" />
+                            <div class="comment-form-submit mt-3">
+                              <input
+                                type="submit"
+                                value="Gửi"
+                                class="comment-submit" />
                             </div>
-                          </div>
-                          <div class="mt-3 form-group col-md-12">
-                            <label class="form-label">Đánh giá</label>
-                            <textarea class="form-control"></textarea>
-                          </div>
-                          <div class="comment-form-submit mt-3">
-                            <input
-                              type="submit"
-                              value="Gửi"
-                              class="comment-submit" />
-                          </div>
-                        </form>
+                          </form>
+                        </div>
                       </div>
                     </div>
-                  </div>
+                  </form>
                 </ng-template>
               </li>
             </ul>
