--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -80,12 +80,12 @@
                   <select
                     class="form-select form-select-sm"
                     (change)="sortByCondition($event)">
-                    <option selected value="">Tất cả</option>
-                    <option value="newest">Mới nhất</option>
+                    <option value="newest" selected>Mới nhất</option>
                     <option value="oldest">Cũ nhất</option>
                     <option value="highPopular">Phổ biến</option>
                     <option value="priceASC">Giá (Thấp -> Cao)</option>
                     <option value="priceDESC">Giá (Cao -> Thấp)</option>
+                    <option value="highRating">Đánh giá cao</option>
                   </select>
                 </div>
               </div>
