--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,4 +1,6 @@
-<div class="single-product position-relative">
+<div
+  class="single-product position-relative cursor-pointer"
+  (click)="redirectDetail(productItem.id)">
   <div class="product-thumb position-relative">
     <a>
       <img
@@ -7,10 +9,16 @@
         class="primary-image w-100 mw-100" />
       <div class="label-product label-new">Mới</div>
       <div class="actions-link position-absolute text-center w-100">
-        <a class="cart-btn" title="Thêm vào giỏ">
+        <a
+          class="cart-btn"
+          title="Thêm vào giỏ"
+          (click)="$event.stopPropagation()">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
-        <a class="wishlist-btn" title="Thêm vào yêu thích">
+        <a
+          class="wishlist-btn"
+          title="Thêm vào yêu thích"
+          (click)="$event.stopPropagation()">
           <i class="fa-regular fa-heart"></i>
         </a>
         <a
@@ -22,16 +30,20 @@
       </div>
     </a>
   </div>
-  <div class="product-caption text-center">
-    <h4
-      class="product-name mb-2 text-size-small cursor-pointer"
-      (click)="redirectDetail(productItem.id)">
-      <a>{{ productItem.name }}</a>
+  <div class="product-caption">
+    <h4 class="product-name text-size-small">
+      {{ productItem.name }}
     </h4>
-    <div class="price-box text-size-medium">
+    <div class="price-box text-size-medium mb-2">
       <span class="new-price fw-600"
         >{{ minPriceOfProduct?.price | formatPrice }}đ</span
       >
     </div>
+    <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
+      <i
+        class="fa-star"
+        [class.fa-solid]="star <= productItem?.ratingStar"
+        [class.fa-regular]="star > productItem?.ratingStar"></i>
+    </ng-container>
   </div>
 </div>
