--- a/src/app/pages/order-history/order-history.component.scss
+++ b/src/app/pages/order-history/order-history.component.scss
@@ -1,7 +1,16 @@
 @import "text-size";
+@import "color";
 
 .detail-product {
   display: flex;
+}
+
+.rating {
+  border: none;
+  padding: 10px 15px;
+  border-radius: 3px;
+  background: $primary-color;
+  color: $white;
 }
 
 @media screen and (max-width: 992px) {
